--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        p{
+            text-align: center;
+            background-color: bisque;
+            color: blue;
+        }
+        b{
+            font-size: 40px;
+        }
+    </style>
+</head>
+<body>
+    <p>This is my personal Page</p>
+    <b>Md.Zakir Hossain</b>
+</body>
+</html>
