--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        p{
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-size: 50px;
+            font-weight: 100;
+            background-color: rgba(163, 230, 207, 0.267);
+            color: brown;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <p>Zakir Hossain</p>
